# Matrix_CPP

./: .gitignore  AppImageBuilder.yaml  CMakeLists.txt  Matrix.desktop  PKGBUILD  README.md  au programme.txt  cameracapture.cpp  cameracapture.h  com.bitscripts.matrix.desktop  com.bitscripts.matrix.json  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.desktop  raindrop.cpp  raindrop.h  resources.qrc  ui_mainwindow.h  videoprocesssing.cpp  videoprocesssing.h  virtualcamera.cpp  virtualcamera.h
.github/workflows/: workflow.yaml  workflow.yaml-old
